@@ -6,7 +6,7 @@ Makefile.PL
 lib/AnyEvent.pm
 lib/AnyEvent/Util.pm
 lib/AnyEvent/Handle.pm
-lib/AnyEvent/Socket.pm
+#lib/AnyEvent/Socket.pm
 lib/AnyEvent/Impl/EV.pm
 lib/AnyEvent/Impl/Event.pm
 lib/AnyEvent/Impl/EventLib.pm
@@ -21,9 +21,9 @@ t/02_signals.t
 t/03_child.t
 t/handle/00_load.t
 t/handle/01_readline.t
-t/handle/02_write.t
-t/handle/03_http_req.t
-t/handle/04_listen.t
+#t/handle/02_write.t
+#t/handle/03_http_req.t
+#t/handle/04_listen.t
 eg/bench
 eg/runbench
 eg/bench2
